--- a/package.json
+++ b/package.json
@@ -1,9 +1,13 @@
 {
-    "name": "socket-io-chat-sample"
-  , "version": "0.0.1"
-  , "private": true
-  , "dependencies": {
-      "express": "2.5.8"
-    , "ejs": ">= 0.0.1"
+  "name": "socket-io-chat-sample",
+  "version": "0.0.1",
+  "engines": {
+    "node": "0.6.14",
+    "npm": "1.1.9"
+  },
+  "dependencies": {
+    "socket.io": "0.9.2",
+    "express": "2.5.8",
+    "ejs": ">= 0.0.1"
   }
 }
